添加附加多条协议功能

--- a/res/layout/bughandle.xml
+++ b/res/layout/bughandle.xml
@@ -20,6 +20,7 @@
         
         <RadioGroup
             android:id="@+id/metertype"
+            android:visibility="gone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
             <RadioButton
