--- a/res/layout/singlecb2.xml
+++ b/res/layout/singlecb2.xml
@@ -11,6 +11,7 @@
         android:background="#ffadd8e6" >
 
         <TextView
+            android:id="@+id/rdbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
