--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -55,6 +55,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:visibility="gone"
         android:background="#ababab" >
 
         <RelativeLayout
