--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources>
 
     <style name="AppTheme" parent="android:Theme.Light" />
+    <style name="AlertDialogCustom" parent="android:style/Theme.Dialog">  
+      <item name="android:textColor">#333333</item>  
+      <item name="android:typeface">monospace</item>  
+  </style> 
 
 </resources>
